@@ -1,3 +1,7 @@
+2011-04-20  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* bootstrap-lto.mk: Remove obsolete requirement.
+
 2011-03-25  Release Manager
 
 	* GCC 4.6.0 released.
